syntax = "proto2";

import "google/protobuf/descriptor.proto";

// see https://github.com/gogo/protobuf/blob/master/gogoproto/gogo.proto
// for the original idea

// Generated files can be customized using this proto
// or using `Customize` struct when codegen is invoked programmatically.

package rustproto;

extend google.protobuf.FileOptions {
    // Use `bytes::Bytes` for `bytes` fields
    optional bool tokio_bytes_all = 17011;
    // Use `bytes::Bytes` for `string` fields
    optional bool tokio_bytes_for_string_all = 17012;

    // When true, will only generate codes that works with lite runtime.
    optional bool lite_runtime_all = 17035;
}

extend google.protobuf.MessageOptions {
    // Use `bytes::Bytes` for `bytes` fields
    optional bool tokio_bytes = 17011;
    // Use `bytes::Bytes` for `string` fields
    optional bool tokio_bytes_for_string = 17012;
}

extend google.protobuf.FieldOptions {
    // Use `bytes::Bytes` for `bytes` fields
    optional bool tokio_bytes_field = 17011;
    // Use `bytes::Bytes` for `string` fields
    optional bool tokio_bytes_for_string_field = 17012;
}
